vue no longer being applied to top level #site-container div
PageContainer.vue and Header.vue logic moved to
page-header.php, headerHeroImage.php and headerNavigationMenu.php

nav menu behaviour is now being handled by vanilla js;
each leg home page will now have a body class of 'leg-home' to target; (+1 squashed commit)
Squashed commits:
[f197185] moved header js script to main.js

vue no longer being applied to top level #site-container div

PageContainer.vue and Header.vue logic moved to
page-header.php, headerHeroImage.php and headerNavigationMenu.php

nav menu behaviour is now being handled by vanilla js;
each leg home page will now have a body class of 'leg-home' to target;

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -82,7 +82,7 @@
     @include bp('portrait')
       padding-bottom: 38.88%
 
-    .home &
+    .leg-home &
       padding-bottom: 24.4rem //76.25%
 
       @include bp('portrait')
@@ -161,6 +161,7 @@
     padding: .3em .7em .3em
     pointer-events: auto
     text-align: center
+    text-transform: uppercase
 
     @include bp('portrait')
       width: 11.3rem
